# quickenv

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
scripts/: release-version.sh
src/: confirm.rs  core.rs  grid.rs  main.rs  signals.rs
tests/: acceptance.rs  acceptance.sh  acceptance_helpers.rs
