[package]
name = "quickenv"
version = "0.4.3"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
edition = "2021"
description = "An unintrusive environment manager"
license = "MIT"
readme = "README.md"
repository = "https://github.com/untitaker/quickenv"
homepage = "https://github.com/untitaker/quickenv"
documentation = "https://github.com/untitaker/quickenv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
# Disable clap's suggestions feature, because it sometimes suggests nonsense:
# https://github.com/clap-rs/clap/discussions/3962
clap = { version = "4.5.39", features = ["derive", "std", "help", "usage"], default-features = false }
console = { version = "0.15.10", default-features = false }
ctrlc = "3.4.7"
dialoguer = { version = "0.11.0", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
exec = "0.3.1"
hex = "0.4.3"
log = "0.4.27"
tempfile = "3.20.0"

# using fork because we're requiring this bugfix:
# https://github.com/ogham/rust-term-grid/pull/14
uutils_term_grid = "0.7.0"
thiserror = "2.0.11"
which = "7"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"], default-features = false }
insta-cmd = "0.6.0"
maplit = "1.0.2"
regex = { version = "1.6.0", default-features = false }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"
